--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,10 @@
         }
     </style>
     {% block extra_css %}{% endblock %}
-    {% block extra_head %}{% endblock %}
+    {% block extra_head %}
+    <meta name="google-adsense-account" content="ca-pub-4509784482094331">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4509784482094331" crossorigin="anonymous"></script>
+    {% endblock %}
 </head>
 <body class="bg-gray-50 text-gray-800 relative">
 
